ADD modal complete

--- a/Vanilla_Modal/index.html
+++ b/Vanilla_Modal/index.html
@@ -14,7 +14,8 @@
     <title>바닐라 모달</title>
   </head>
   <body>
-    <div class="modal-container">
+    <button class="cta-btn" id="open">바닐라 모달 열기</button>
+    <div class="modal-container" id="modal">
       <div class="modal">
         <button class="close-btn" id="close">
           <i class="fa fa-times"></i>
@@ -22,7 +23,15 @@
         <div class="modal-header">
           <h3>바닐라 모달</h3>
         </div>
-        <div class="modal-content"></div>
+        <div class="modal-content">
+          Vanilla JS는 자바스크립트 프레임워크로 다른 프레임워크나 jQuery보다도
+          압도적으로 빠르고 웹표준을 잘 지키는 웹브라우저들에 대해서는 크로스
+          브라우징이 잘 되는 특성이 있다. 페이스북, 구글, 유튜브 등등 유명한
+          해외 사이트에서 사용되었으며, 다른 플랫폼보다도 오래되었음에도
+          불구하고 꾸준히 업데이트 되어 온 프레임워크이다. 용량도 매우 가벼워서
+          압축을 하는 경우 압축을 하지 않은 경우보다 용량이 더 나가는 역설적인
+          무게를 자랑한다.
+        </div>
       </div>
     </div>
     <script src="./script.js"></script>
