--- a/Sortable_List/index.html
+++ b/Sortable_List/index.html
@@ -12,7 +12,7 @@
     <title>분류할 수 있는 목록</title>
   </head>
   <body>
-    <h1>드레그 & 드롭으로 리스트를 분류해보세요.</h1>
+    <h1>✅드레그 & 드롭으로 리스트를 분류해보세요.</h1>
     <ul class="draggable-list" id="draggable-list"></ul>
     <script src="./script.js"></script>
   </body>
