--- a/Infinite_Scrolling/index.html
+++ b/Infinite_Scrolling/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <h1>♾무한 스크롤♾</h1>
     <div class="filter-container">
       <input
         type="text"
