--- a/MemoryCard/index.html
+++ b/MemoryCard/index.html
@@ -16,12 +16,12 @@
   <body>
     <!-- 카드를 지우는 부분입니다. -->
     <button id="clear" class="clear btn">
-      <i class="fas fa-trash"></i> Clear Cards
+      <i class="fas fa-trash"></i> 모두 지우기
     </button>
 
     <!-- 새로운 카드를 만들기위한 모달을 띄우게 할 버튼입니다. -->
     <h1>
-      메모리 카드
+      📝메모리 카드
       <button id="show" class="btn btn-small">
         <i class="fas fa-plus"></i> 새로운 카드 추가
       </button>
@@ -54,12 +54,12 @@
 
       <div class="form-group">
         <label for="question">질문</label>
-        <textarea id="question" placeholder="Enter question..."></textarea>
+        <textarea id="question" placeholder="질문을 입력해보세요"></textarea>
       </div>
 
       <div class="form-group">
         <label for="answer">대답</label>
-        <textarea id="answer" placeholder="Enter Answer..."></textarea>
+        <textarea id="answer" placeholder="답을 입력해보세요"></textarea>
       </div>
 
       <button id="add-card" class="btn">
